# StockPredictorUsingARIMAandProphet

./: Makefile  README.md  environment.yml  pyproject.toml
StockPredictorUsingARIMAandProphet/: README.md
notebooks/: Data Wrangling and EDA.ipynb  Preprocessing and Modeling.ipynb
